<resources>
    <string name="app_name">ChitFunds</string>
    <string name="password">  Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">sign in</string>
    <string name="e_mail">  E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">next</string>
    <string name="full_name">Full Name</string>
    <string name="nominee_name">Nominee Name</string>
    <string name="nominee_phone_number">Nominee Phone Number</string>
    <string name="your_location_village_name">Your Location / Village Name</string>
    <string name="register">register</string>
    <string name="sign_up">sign up</string>
    <string name="alt_splash">Alternate image for splash</string>
    <string name="bandam_chits">BANDAM CHITS</string>
    <string name="my_profile">My Profile</string>
    <string name="calculator">Calculator</string>
    <string name="plans">Plans</string>
    <string name="faqs">FAQS</string>
    <string name="about_us">About Us</string>
    <string name="home">Home</string>
</resources>
