<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.sign_in"
    android:background="@drawable/water_drops">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signin_textinputlayout_email"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signin_textinputedittext_email"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@drawable/edit_round"
            android:hint="@string/e_mail"
            android:paddingLeft="20dp"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="126dp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signin_textinputlayout_password"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_textinputlayout_email"
        app:layout_constraintVertical_bias="0.126"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signin_textinputedittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_round"
            android:hint="@string/password"
            android:paddingLeft="20dp"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="324dp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_singin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round"
        android:text="@string/sign_in"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_textinputlayout_password"
        app:layout_constraintVertical_bias="0.204" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_singin"
        app:layout_constraintVertical_bias="0.208" />


</androidx.constraintlayout.widget.ConstraintLayout>