<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.sign_up2"
    android:background="@drawable/water_drops">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_textinputlayout_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_textinputedittext_full_name"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@drawable/edit_round"
            android:hint="@string/full_name"
            android:paddingLeft="20dp"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="126dp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_textinputlayout_nominee_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="448dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_textinputlayout_full_name"
        app:layout_constraintVertical_bias="0.348">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_textinputedittext_nominee_name"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@drawable/edit_round"
            android:hint="@string/nominee_name"
            android:paddingLeft="20dp"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="324dp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_textinputlayout_nominee_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_textinputlayout_nominee_name"
        app:layout_constraintVertical_bias="0.067">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_textinputedittext_nominee_phone_number"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@drawable/edit_round"
            android:hint="@string/nominee_phone_number"
            android:inputType="number"
            android:paddingLeft="20dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="324dp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_textinputlayout_loaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="196dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_textinputlayout_nominee_phone_number"
        app:layout_constraintVertical_bias="0.262">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_textinputedittext_location"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@drawable/edit_round"
            android:hint="@string/your_location_village_name"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="324dp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_signup_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_textinputlayout_loaction"
        app:layout_constraintVertical_bias="0.316" />


</androidx.constraintlayout.widget.ConstraintLayout>